Fix header spacing in small devices

--- a/src/scss/_masthead.scss
+++ b/src/scss/_masthead.scss
@@ -1,7 +1,7 @@
 header.masthead {
   position: relative;
   overflow: hidden;
-  height: 50vh;
+  height: 75vh;
   background-image: url("../img/header.jpg");
   background-repeat: no-repeat;
   background-position: center center;
